# CSC-CPP-19

./: README.md
Lab1/: CMakeLists.txt  README.md
Lab1/src/: main.cpp
Lab1/src/hash/: crc32.cpp  crc32.h  sum32.cpp  sum32.h
Lab1/src/tests/: hash_unittest.cpp
Lab2/: .gitignore  CMakeLists.txt  README.md
Lab2/src/polynomial/: Polynomial.h
Lab2/src/tests/: polynom_unittest.cpp
Lab3/: CMakeLists.txt  README.md
Lab3/src/: main.cpp
Lab3/src/paint/: Figure.cpp  Figure.h  Parser.cpp  Parser.h  Scene.cpp  Scene.h
Lab3/src/tests/: interpreter_unittest.cpp
Lab4/: README.md  main.cpp
